# vplan-android

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.gradle
.travis/: cargo.toml  detekt.sh  install.sh  keystore.jks.gpg  lint.sh  release.sh
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/de/fschillerg/vplan/: InstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/de/fschillerg/vplan/: MainActivity.kt
app/src/main/java/de/fschillerg/vplan/about/: AboutActivity.kt  LibrariesActivity.kt
app/src/main/java/de/fschillerg/vplan/background/: BackgroundWorker.kt  Scheduler.kt  Storage.kt
app/src/main/java/de/fschillerg/vplan/dialogs/: DialogManager.kt  (+2 more)
app/src/main/res/drawable/: ic_error.xml  ic_new.xml  ic_remove.xml
app/src/main/res/layout/: activity_about.xml  activity_libraries.xml  activity_main.xml  activity_notifications.xml  activity_settings.xml  dialog_add_form.xml  dialog_add_teacher.xml  dialog_credentials.xml  fragment_content.xml  fragment_filter.xml  fragment_info.xml  fragment_main.xml  table_cell.xml  table_column_header.xml  table_corner.xml  table_row_header.xml
app/src/main/res/layout-v26/: dialog_add_form.xml  dialog_add_teacher.xml  dialog_credentials.xml
app/src/main/res/menu/: menu.xml
app/src/main/res/values/: colors.xml  dimens.xml  forms.xml  libary_libvplan_strings.xml  strings.xml  styles.xml
app/src/main/res/values-de-rDE/: strings.xml
app/src/test/java/de/fschillerg/vplan/: Weekday.kt
gradle/wrapper/: gradle-wrapper.properties
src/: lib.rs  logger.rs
(+19 files in other folders)
